# zain_pkg

./: CMakeLists.txt  README.md  package.xml
launch/: zains_launch.py  zains_load.py
meshes/ur10e/collision/: tool.objbak  tool.stl  tool.stlbak  tool2.objbak
meshes/ur10e/visual/: UR_Plasma_Camera.stl
src/: robot_moveit.cpp
urdf/: ur10e_xacro_cam.urdf  ur10e_xacro_plasma.urdf.xml
